--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,5 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
     implementation "androidx.navigation:navigation-compose:2.5.0-rc01"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 }
